Fix: don't wrap titles if people have silly long server-names

--- a/webclient/static/css/page.css
+++ b/webclient/static/css/page.css
@@ -16,6 +16,7 @@
 	margin-right: 20px;
 	margin-top: 0;
 	text-decoration: none;
+	white-space: nowrap;
 }
 
 .section-item {
